force-app/main/default/objects/Case/fields/CarBrand__c.field-meta.xml
<CustomField>
    <fullName>CarBrand__c</fullName>
    <label>CarBrand</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>