force-app/main/default/objects/Case/fields/CarVinCode__c.field-meta.xml
<CustomField>
    <fullName>CarVinCode__c</fullName>
    <label>CarVinCode</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>